# GranularSynthesizer

./: .gitignore  GranularSynth  LICENSE  README.md  functionality.txt  install.sh  settings.json
.github/workflows/: build-macos-installer.yml
backend/: BACKEND.md  Cargo.toml
backend/src/: lib.rs
frontend/: AudioSettingsDialog.cpp  AudioSettingsDialog.h  CMakeLists.txt  Info.plist.in  SynthUI.cpp  SynthUI.h  main.cpp  resources.qrc
frontend/dialog/: AudioSettingsDialog.cpp
frontend/images/buttons/: modify_svg_colors.py
frontend/settings/: SettingsManager.cpp  SettingsManager.h
frontend/styles/: styles.qss
scriptend/: main.lua
