[package]
name = "backend"
version = "0.1.1"
edition = "2021"
authors = ["Cuervo Blanco"]
description = "DSP backend for a Granular Synth"
license = "MIT" 
repository = "n/a" 
documentation = "n/a" 

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
dasp = "0.11.0"
dasp_interpolate = { version = "0.11.0", features = ["linear"] }
dasp_ring_buffer = "0.11.0"
dasp_signal = "0.11.0"
hound = "3.5.1"
rand = "0.8.5"

